Fix layout bug in fetch dialog

A spacer widget was interfering with the layout and could
prevent clicking on the Multiple ISBN checkbox at times

BUG: 449636
FIXED-IN: 3.4.4